--- a/kustom-webapp/overlays/dev/config.properties
+++ b/kustom-webapp/overlays/dev/config.properties
@@ -1,3 +1,3 @@
 BG_COLOR=#000000
 FONT_COLOR=#FFFFFF
-CUSTOM_HEADER=Welcome to the DEV environment from my local at Getir!!
+CUSTOM_HEADER=Welcome to the DEV environment from my local!!
